# ib_insync

./: .gitignore  .travis.yml  README.rst  pyproject.toml  setup.py
.github/workflows/: test.yml
examples/: qt_ticker_table.py  tk.py
ib_insync/: __init__.py  client.py  contract.py  ib.py  objects.py  order.py  ticker.py  util.py  version.py  wrapper.py
notebooks/: bar_data.ipynb  basics.ipynb  contract_details.ipynb  market_depth.ipynb  option_chain.ipynb  ordering.ipynb  scanners.ipynb  tick_data.ipynb
tests/: conftest.py  test_requests.py
